unpackaged/main/default/objects/Update_Statging_Table__c/Update_Statging_Table__c.object-meta.xml
<CustomObject>
    <label>Update Statging Table</label>
    <nameField>
        <displayFormat>UST-{000000}</displayFormat>
        <label>Update Statging Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Update Statging Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>