unpackaged/main/default/objects/Update_Statging_Table__c/fields/CajaOpcionesMenuPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CajaOpcionesMenuPrincipal__c</fullName>
    <label>CajaOpcionesMenuPrincipal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagos</fullName>
            </value>
            <value>
                <fullName>Estado de Cuenta</fullName>
            </value>
            <value>
                <fullName>Corte de Caja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>