unpackaged/main/default/objects/Update_Statging_Table__c/fields/Check_Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Check_Titulacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Titulación</label>
    <type>Checkbox</type>
</CustomField>