unpackaged/main/default/objects/Update_Statging_Table__c/fields/ChoicePicklist__c.field-meta.xml
<CustomField>
    <fullName>ChoicePicklist__c</fullName>
    <label>Caja-ChoicePicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Proceso de Venta</fullName>
            </value>
            <value>
                <fullName>Ubicación</fullName>
                <isActive>false</isActive>
                <label>Ubicación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>