unpackaged/main/default/objects/Update_Statging_Table__c/fields/Destino_Actualizado__c.field-meta.xml
<CustomField>
    <fullName>Destino_Actualizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destino Actualizado</label>
    <type>Checkbox</type>
</CustomField>