unpackaged/main/default/objects/Update_Statging_Table__c/fields/Estatus_UST__c.field-meta.xml
<CustomField>
    <fullName>Estatus_UST__c</fullName>
    <label>Estatus UST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Actualizado</fullName>
            </value>
            <value>
                <fullName>Falló</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>