unpackaged/main/default/objects/Update_Statging_Table__c/fields/Estatus_UST_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estatus_UST_Formula__c</fullName>
    <formula>IMAGE( CASE( Estatus_UST__c,
             &quot;Actualizado&quot;, &quot;/resource/DotIcon_Green?&quot;,
             &quot;En Proceso&quot;, &quot;/resource/DotIcon_RoyalBlue?&quot;,
             &quot;Falló&quot;, &quot;/resource/DotIcon_Red?&quot;,
             &quot;/resource/1696535368000/DotIcon_Gray?&quot;), &quot;Estatus UST&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus UST</label>
    <type>Text</type>
</CustomField>