unpackaged/main/default/objects/Update_Statging_Table__c/fields/Id_Proceso_AR__c.field-meta.xml
<CustomField>
    <fullName>Id_Proceso_AR__c</fullName>
    <label>Id Proceso AR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>