unpackaged/main/default/objects/Update_Statging_Table__c/fields/Link_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Link_Proceso_de_Venta__c</fullName>
    <formula>HYPERLINK(&quot;https://javer--preprod.sandbox.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Opportunity_Id__c &amp;&quot;/view&quot;, Registro_de_Titulacion__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Proceso de Venta</label>
    <type>Text</type>
</CustomField>