unpackaged/main/default/objects/Update_Statging_Table__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>