unpackaged/main/default/objects/Update_Statging_Table__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan de Venta</label>
    <type>Checkbox</type>
</CustomField>