unpackaged/main/default/objects/Update_Statging_Table__c/fields/Plan_de_Venta_Id__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_Id__c</fullName>
    <label>Plan de Venta Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>