unpackaged/main/default/objects/Update_Statging_Table__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceso de Venta</label>
    <type>Checkbox</type>
</CustomField>