unpackaged/main/default/objects/Update_Statging_Table__c/fields/Registro_de_Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Registro_de_Titulacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registro de Titulación</label>
    <referenceTo>Titulacion__c</referenceTo>
    <relationshipLabel>Update Statging Tables</relationshipLabel>
    <relationshipName>Update_Statging_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>