unpackaged/main/default/objects/Update_Statging_Table__c/fields/Registro_del_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Registro_del_Proceso_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registro del Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Update Statging Tables</relationshipLabel>
    <relationshipName>Update_Statging_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>