unpackaged/main/default/objects/Update_Statging_Table__c/fields/Titulacion_Id__c.field-meta.xml
<CustomField>
    <fullName>Titulacion_Id__c</fullName>
    <label>Titulación Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>