unpackaged/main/default/objects/Update_Statging_Table__c/fields/Valor_del_Estatus__c.field-meta.xml
<CustomField>
    <fullName>Valor_del_Estatus__c</fullName>
    <label>Valor del Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escriturado</fullName>
                <default>true</default>
                <label>Escriturado</label>
            </value>
            <value>
                <fullName>Validación</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Formalizado</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>