unpackaged/main/default/objects/Update_Statging_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus_UST__c</columns>
    <columns>Estatus_UST_Formula__c</columns>
    <columns>Opportunity_Id__c</columns>
    <columns>Registro_del_Proceso_de_Venta__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Id_Proceso_AR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>