unpackaged/main/default/objects/Update_Statging_Table__c/listViews/Last_and_This_Week.listView-meta.xml
<ListView>
    <fullName>Last_and_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Estatus_UST__c</columns>
    <columns>Estatus_UST_Formula__c</columns>
    <columns>Opportunity_Id__c</columns>
    <columns>Link_Proceso_de_Venta__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Id_Proceso_AR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK,LAST_WEEK</value>
    </filters>
    <label>Last and This Week</label>
</ListView>